# nufi-dataset-builder

./: .gitignore  LICENSE  README.md  pyproject.toml
src/nufi_dataset_builder/: __init__.py  __main__.py  cli.py  dump_bana_headword_audit.py  local_dictionary_db.py  migrate_add_orthography_category.py  nufi_bana_classification.py  nufi_bana_standard_maps.py  nufi_dictionary_builder.py  rebuild.py  web_app.py
